--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,8 +4,20 @@
   align-items: center;
   padding: 2.7rem 5rem;
   background-color: #5ea3a3;
+
+  a {
+    text-decoration: none;
+    color: black;
+  }
 }
 
 .userIcon {
+  display: block;
   font-size: 2.6rem;
+}
+
+.headerNav {
+  display: flex;
+  width: 7.5em;
+  justify-content: space-between;
 }
