Add validation for name, preparation time and nutrients

--- a/src/components/AddRecipeForm/AddRecipeForm.module.scss
+++ b/src/components/AddRecipeForm/AddRecipeForm.module.scss
@@ -9,3 +9,14 @@
     width: auto;
   }
 }
+
+.error {
+  border: 2px solid #FF6565;
+}
+
+.errorMessage {
+  color: #FF6565;
+  padding: 0.5em 0.2em .8em .2em;
+  height: 1em;
+  font-size: .8em;
+}
