--- a/src/components/RecipePreviewWrapper/RecipePreviewWrapper.module.scss
+++ b/src/components/RecipePreviewWrapper/RecipePreviewWrapper.module.scss
@@ -1,8 +1,15 @@
+.mainWrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .recipePreviewWrapper {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	width: 100%;
-	padding: 5rem 3rem;
-	margin: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  padding: 5rem 3rem;
+  margin: 0;
 }
