--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,6 +4,10 @@
   align-items: center;
   padding: 2.7rem 5rem;
   background-color: #5ea3a3;
+  position: fixed;
+  height: 10rem;
+  width: 100%;
+  z-index: 5;
 
   a {
     text-decoration: none;
