--- a/src/components/RecipePreviewWrapper/RecipePreview/RecipePreview.module.scss
+++ b/src/components/RecipePreviewWrapper/RecipePreview/RecipePreview.module.scss
@@ -1,67 +1,90 @@
-.image {
-	height: 100%;
-	width: 100%;
-}
-
-.imageBox {
-	width: 100%;
-	height: 10em;
-}
-
 .recipePreview {
-	margin: 1.5rem;
-	list-style-type: none;
+  margin: 1.5rem;
+  list-style-type: none;
 
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-	background-color: #add2c9;
-	max-width: 24rem;
-	min-width: 19rem;
-	height: 24rem;
-	font-size: 1.5rem;
-	padding: 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: #add2c9;
+  max-width: 24rem;
+  min-width: 19rem;
+  height: 24rem;
+  font-size: 1.5rem;
+  padding: 0;
 }
 
 .recipePreview:hover {
-	cursor: pointer;
+  cursor: pointer;
 }
 
+// IMAGE
+
+.image {
+  height: 100%;
+  width: 100%;
+}
+
+.imageBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 10em;
+  position: relative;
+}
+
+.shadow {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .2);
+  z-index: 1;
+  transition: 0.8s;
+
+  &:hover {
+    background-color: rgba(0, 0, 0, 0);
+    transition: 0.65s;
+  }
+}
+
+// INFO
+
 .info {
-	height: 100%;
-	width: 100%;
+  height: 100%;
+  width: 100%;
 
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-between;
-	padding: 1.8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.8rem;
 
-	p {
-		margin: 0;
-	}
+  p {
+    margin: 0;
+  }
 }
 
 .details {
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	padding-top: 0.5rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 0.5rem;
 }
 
 .diet {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 1.2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2em;
 }
 
 .recipeName {
-	text-align: center;
+  text-align: center;
 }
 
 .detailsColumn {
-	padding: 0;
-	display: flex;
-	justify-content: center;
+  padding: 0;
+  display: flex;
+  justify-content: center;
 }
