--- a/src/components/RecipePreviewWrapper/RecipePreview/RecipeRating/RecipeRating.module.scss
+++ b/src/components/RecipePreviewWrapper/RecipePreview/RecipeRating/RecipeRating.module.scss
@@ -1,6 +1,15 @@
 .rating {
-  .ratingIcon{
+  &Icon {
     vertical-align: -0.02;
     margin-right: 0.5rem;
+    color: gold;
+
+    &Disabled {
+      color: gray;
+    }
+  }
+
+  &Disabled {
+    color: gray;
   }
 }
