--- a/src/components/RecipePreviewWrapper/RecipePreview/RecipePreview.module.scss
+++ b/src/components/RecipePreviewWrapper/RecipePreview/RecipePreview.module.scss
@@ -5,12 +5,14 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  background-color: #add2c9;
+  background-color: #d5e6e2;
   max-width: 24rem;
   min-width: 19rem;
-  height: 24rem;
+  height: 26.5rem;
   font-size: 1.5rem;
   padding: 0;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+  border-radius: 5px;
 }
 
 .recipePreview:hover {
@@ -25,12 +27,14 @@
 }
 
 .imageBox {
+  border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 10em;
   position: relative;
+  border: gray solid 1px;
 }
 
 .shadow {
@@ -54,10 +58,6 @@
   height: 100%;
   width: 100%;
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
   padding: 1.8rem;
 
   p {
@@ -81,6 +81,9 @@
 
 .recipeName {
   text-align: center;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
 }
 
 .detailsColumn {
