--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,10 +2,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2.7rem 5rem;
-  background-color: #5ea3a3;
+  padding: 2.7rem 5rem 2.7rem 2.3rem;
+  background-image: linear-gradient(180deg, #5ea3a3, #548b8b);
   position: fixed;
-  height: 10rem;
+  height: 11rem;
   width: 100%;
   z-index: 5;
 
@@ -19,4 +19,12 @@
   display: flex;
   width: 8.5em;
   justify-content: space-between;
+  align-items: center;
+  text-align: center;
+}
+
+@media (max-width: 450px) {
+  .headerNav {
+    width: 6.5em;
+  }
 }
