--- a/src/components/RecipePreviewWrapper/RecipePreviewWrapper.module.scss
+++ b/src/components/RecipePreviewWrapper/RecipePreviewWrapper.module.scss
@@ -3,7 +3,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: 30rem;
+}
+
+.filter {
+  &Visible {
+    margin-left: 25rem;
+    transition: margin-left 0.8s;
+  }
+
+  &Hidden {
+    margin-left: 0;
+    transition: margin-left 0.8s;
+  }
 }
 
 .recipePreviewWrapper {
@@ -12,5 +23,11 @@
   justify-content: center;
   width: 100%;
   padding: 5rem 3rem;
-  margin: 0;
+}
+
+@media (max-width: 450px) {
+  .mainWrapper {
+    margin-left: 0;
+    transition: margin-left 0.8s;
+  }
 }
