--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,6 +4,7 @@
   align-items: center;
   padding: 2.7rem 5rem 2.7rem 2.7rem;
   background-image: linear-gradient(180deg, #5ea3a3, #548b8b);
+  box-shadow: 0 0 12px rgba(0, 0, 0, .5);
   position: fixed;
   height: 11rem;
   width: 100%;
