Add icons for Filter buttons

--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -44,12 +44,14 @@
 
 .hideButton {
   position: absolute;
+  font-size: 2.3rem;
   top: -4rem;
   right: -1.5rem;
 }
 
 .showButton {
   position: fixed;
+  font-size: 2.3rem;
   top: 12.5rem;
   left: 1.4rem;
   z-index: 5;
