--- a/src/components/RecipePreviewWrapper/RecipePreview/RecipePreview.module.scss
+++ b/src/components/RecipePreviewWrapper/RecipePreview/RecipePreview.module.scss
@@ -5,14 +5,29 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  background-color: #d5e6e2;
-  max-width: 24rem;
-  min-width: 19rem;
-  height: 26.5rem;
+  //background-color: rgba(158, 208, 208, 0.78);
+  //background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.64), rgba(7, 141, 141, 0.42));
+  //background-image: linear-gradient(180deg, rgb(206, 221, 222), rgba(217, 255, 255, 0.52));
+  background-image: linear-gradient(180deg, #abc8ca, rgba(217, 255, 255, 0.52));
+
+  max-width: 28rem;
+  min-width: 22.5rem;
+  height: 29.5rem;
   font-size: 1.5rem;
   padding: 0;
   box-shadow: rgba(0, 0, 0, 0.1) 0 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
   border-radius: 5px;
+
+  font-weight: bold;
+
+  border: lightgrey solid 1px;
+}
+
+@media (min-width: 450px) {
+  .recipePreview {
+    min-width: 22.5rem;
+    height: 29.5rem;
+  }
 }
 
 .recipePreview:hover {
@@ -27,14 +42,12 @@
 }
 
 .imageBox {
-  border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 10em;
+  height: 55%;
   position: relative;
-  border: gray solid 1px;
 }
 
 .shadow {
@@ -55,7 +68,7 @@
 // INFO
 
 .info {
-  height: 100%;
+  height: 45%;
   width: 100%;
 
   padding: 1.8rem;
@@ -70,20 +83,37 @@
   display: flex;
   justify-content: space-between;
   padding-top: 0.5rem;
+
+  margin-top: 0.5rem;
+  overflow-wrap: break-word;
 }
 
 .diet {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.2em;
+  font-size: 1.4em;
+  margin-bottom: 0.5rem;
 }
 
 .recipeName {
-  text-align: center;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  hyphens: auto;
+
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  p {
+    display: initial;
+    text-align: center;
+    font-size: 1.6rem;
+    padding-bottom: 1rem;
+    text-transform: uppercase;
+
+    hyphens: auto;
+    word-break: break-word;
+  }
 }
 
 .detailsColumn {
