--- a/src/components/RecipePreviewWrapper/RecipePreview/RecipePreview.module.scss
+++ b/src/components/RecipePreviewWrapper/RecipePreview/RecipePreview.module.scss
@@ -5,9 +5,6 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  //background-color: rgba(158, 208, 208, 0.78);
-  //background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.64), rgba(7, 141, 141, 0.42));
-  //background-image: linear-gradient(180deg, rgb(206, 221, 222), rgba(217, 255, 255, 0.52));
   background-image: linear-gradient(180deg, #abc8ca, rgba(217, 255, 255, 0.52));
 
   max-width: 28rem;
@@ -18,7 +15,8 @@
   box-shadow: rgba(0, 0, 0, 0.1) 0 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
   border-radius: 5px;
 
-  font-weight: bold;
+  font-weight: 600;
+  font-family: 'Poppins', sans-serif;
 
   border: lightgrey solid 1px;
 }
