--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -11,7 +11,7 @@
 
   height: 100%;
   width: 25rem;
-  padding: 3.5rem;
+  padding: 2.5rem;
   z-index: 2;
 
   font-size: 1.6rem;
@@ -32,6 +32,7 @@
 
   &List {
     margin-top: 2.3rem;
+    padding: 0;
     position: relative;
   }
 
@@ -53,8 +54,8 @@
 .hideButton {
   position: absolute;
   font-size: 2.3rem;
-  top: -4rem;
-  right: -1.5rem;
+  top: -3.2rem;
+  right: -0.7rem;
 }
 
 .showButton {
