Style and fix time filter

--- a/src/components/Filter/DietFilter/DietFilter.module.scss
+++ b/src/components/Filter/DietFilter/DietFilter.module.scss
@@ -1,3 +1,11 @@
-.dietBox {
-  padding: 1.5rem;
+.diet {
+  &Box {
+    padding: 1.5rem;
+  }
+
+  &Wrapper {
+    h2 {
+      margin: 0;
+    }
+  }
 }
