--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,7 +7,7 @@
   box-shadow: 0 0 12px rgba(0, 0, 0, .5);
   position: fixed;
   height: 11rem;
-  width: 100%;
+  width: 100vw;
   z-index: 5;
   transition: all 0.5s;
 
