--- a/src/components/RecipePreviewWrapper/RecipePreviewWrapper.module.scss
+++ b/src/components/RecipePreviewWrapper/RecipePreviewWrapper.module.scss
@@ -3,5 +3,11 @@
   flex-direction: row;
   justify-content: center;
   width: 100%;
-  padding: 5rem 3rem;
+  padding: 4rem 3rem;
+}
+
+@media (max-width: 950px) {
+  .recipePreviewWrapper {
+    padding: 3rem 2rem;
+  }
 }
