--- a/src/components/Recipe/Recipe.module.scss
+++ b/src/components/Recipe/Recipe.module.scss
@@ -1,5 +1,7 @@
 .recipeContainer {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .details {
@@ -20,6 +22,7 @@
   background-color: lightgrey;
   padding: 2rem 1rem 1rem;
   margin: 3rem 0;
+  width: 100%;
 }
 
 .nutrients {
