--- a/src/components/Forms/RegisterForm/RegisterForm.module.scss
+++ b/src/components/Forms/RegisterForm/RegisterForm.module.scss
@@ -1,7 +1,7 @@
 .submit {
   display: flex;
   justify-content: center;
-  padding: 5rem;
+  padding: 1rem 5rem;
 }
 
 .error {
@@ -13,4 +13,18 @@
   padding: 0.5em 0.2em .8em .2em;
   height: 1em;
   font-size: .8em;
+}
+
+.termsOfUse {
+  div {
+    display: flex;
+    height: 1.7rem;
+    width: 100%;
+  }
+
+  input {
+    width: 2rem;
+    height: 2rem;
+    margin-left: 1rem;
+  }
 }
